ZCS-10113 : Allow user to disable Web, POP3, and IMAP.
Adding translation for other languages.

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -1236,6 +1236,7 @@ NAD_MonitorHostServer = Supervisar el servidor de l\u2019amfitri\u00f3:
 NAD_GeneralOptions = Opcions generals
 NAD_MailOptions = Opcions de correu
 NAD_MailOptionsStandardClient = Client est\u00e0ndard (HTML)
+NAD_PopImapOptions = Opcions POP/IMAP
 NAD_ContactsOptions = Opcions de contactes
 NAD_CalendarOptions = Opcions d\u2019agenda
 NAD_MailOptionsSending = Enviament de correu
@@ -1399,6 +1400,7 @@ LBL_zimbraFeatureFiltersEnabled = Filtres de correu
 LBL_zimbraFeatureMailForwardingEnabled = Permet a l\u2019usuari indicar una adre\u00e7a de reenviament
 LBL_zimbraImapEnabled = Acc\u00e9s IMAP
 LBL_zimbraPop3Enabled = Acc\u00e9s POP3
+LBL_zimbraFeatureWebClientEnabled = Acc\u00e9s client web
 LBL_zimbraExternalImapEnabled = Acc\u00e9s extern IMAP
 LBL_zimbraExternalPop3Enabled = Acc\u00e9s POP extern
 LBL_zimbraFeatureSharingEnabled = Compartici\u00f3
@@ -1471,6 +1473,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = En respondre, inclou el text original
 LBL_zimbraPrefForwardIncludeOriginalText = En reenviar, inclou el text original
 LBL_zimbraPrefComposeInNewWindow = Redacta sempre en una finestra nova
 LBL_zimbraPrefForwardReplyInOriginalFormat = Respon/reenvia fent servir el format del missatge original
+LBL_zimbraPrefImapEnabled = Activa l\u0027acc\u00e9s IMAP
+LBL_zimbraPrefPop3Enabled = Activa l\u0027acc\u00e9s POP
 LBL_zimbraPrefAutoAddAddressEnabled = Habilita l\u2019afegit autom\u00e0tic de contactes
 LBL_zimbraPrefMailItemsPerPage = Nombre d\u2019elements que cal mostrar a cada p\u00e0gina:
 MSG_zimbraPrefMailItemsPerPage = Nombre d\u2019elements que cal mostrar per p\u00e0gina
