--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -1210,6 +1210,7 @@ NAD_MonitorHostServer = Overv\u00e5g v\u00e6rtsserver:
 NAD_GeneralOptions = Generelle indstillinger
 NAD_MailOptions = Indstillinger for mail
 NAD_MailOptionsStandardClient = Standardklient (HTML)
+NAD_PopImapOptions = POP/IMAP indstillinger
 NAD_ContactsOptions = Indstillinger for kontaktpersoner
 NAD_CalendarOptions = Indstillinger for kalender
 NAD_MailOptionsSending = Sending af mail
@@ -1373,6 +1374,7 @@ LBL_zimbraFeatureFiltersEnabled = Mail-filtre
 LBL_zimbraFeatureMailForwardingEnabled = Tillad at bruger angiver en videresendelsesadresse
 LBL_zimbraImapEnabled = IMAP-adgang
 LBL_zimbraPop3Enabled = POP3-adgang
+LBL_zimbraFeatureWebClientEnabled = Webklientadgang
 LBL_zimbraExternalImapEnabled = Ekstern IMAP-adgang
 LBL_zimbraExternalPop3Enabled = Ekstern POP-adgang
 LBL_zimbraFeatureSharingEnabled = Deling
@@ -1445,6 +1447,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Inkluder originaltekst ved svar
 LBL_zimbraPrefForwardIncludeOriginalText = Inkluder originaltekst ved videresendelse
 LBL_zimbraPrefComposeInNewWindow = Skriv altid mail i et nyt vindue
 LBL_zimbraPrefForwardReplyInOriginalFormat = Svar/Videresend med samme format som i den originale meddelelse
+LBL_zimbraPrefImapEnabled = Aktiv\u00e9r IMAP-adgang
+LBL_zimbraPrefPop3Enabled = Aktiv\u00e9r POP-adgang
 LBL_zimbraPrefAutoAddAddressEnabled = Aktiv\u00e9r automatisk tilf\u00f8jelse af kontaktpersoner
 LBL_zimbraPrefMailItemsPerPage = Antal elementer du vil have vist pr. side:
 MSG_zimbraPrefMailItemsPerPage = Antal elementer du vil have vist pr. side
