--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -1219,6 +1219,7 @@ NAD_MonitorHostServer = Hostserver \u00fcberwachen:
 NAD_GeneralOptions = Allgemeine Optionen
 NAD_MailOptions = Mail-Optionen
 NAD_MailOptionsStandardClient = Standard-Client (HTML)
+NAD_PopImapOptions = POP/IMAP-Optionen
 NAD_ContactsOptions = Kontaktoptionen
 NAD_CalendarOptions = Kalenderoptionen
 NAD_MailOptionsSending = Mail senden
@@ -1382,6 +1383,7 @@ LBL_zimbraFeatureFiltersEnabled = Mailfilter
 LBL_zimbraFeatureMailForwardingEnabled = Nutzer kann Weiterleitungsadresse angeben
 LBL_zimbraImapEnabled = IMAP-Zugriff
 LBL_zimbraPop3Enabled = POP3-Zugriff
+LBL_zimbraFeatureWebClientEnabled = Web Client-Zugriff
 LBL_zimbraExternalImapEnabled = Externer IMAP-Zugriff
 LBL_zimbraExternalPop3Enabled = Externer POP-Zugriff
 LBL_zimbraFeatureSharingEnabled = Freigaben
@@ -1454,6 +1456,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Original beim Antworten mitsenden
 LBL_zimbraPrefForwardIncludeOriginalText = Original beim Weiterleiten mitsenden
 LBL_zimbraPrefComposeInNewWindow = Mails immer in neuem Fenster verfassen
 LBL_zimbraPrefForwardReplyInOriginalFormat = Im Format der urspr\u00fcnglichen Mails antworten/weiterleiten
+LBL_zimbraPrefImapEnabled = Aktivieren Sie den IMAP-Zugriff
+LBL_zimbraPrefPop3Enabled = Aktivieren Sie den POP-Zugriff
 LBL_zimbraPrefAutoAddAddressEnabled = Automatisches Hinzuf\u00fcgen von Kontakten aktivieren
 LBL_zimbraPrefMailItemsPerPage = Anzahl der pro Seite angezeigten Objekte:
 MSG_zimbraPrefMailItemsPerPage = Anzahl der pro Seite angezeigten Objekte
