--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -1223,6 +1223,7 @@ NAD_MonitorHostServer = Supervisar servidor del servidor:
 NAD_GeneralOptions = Opciones generales
 NAD_MailOptions = Opciones de correo
 NAD_MailOptionsStandardClient = Versi\u00f3n est\u00e1ndar (HTML)
+NAD_PopImapOptions = Opciones POP/IMAP
 NAD_ContactsOptions = Opciones de Contactos
 NAD_CalendarOptions = Opciones de Agenda
 NAD_MailOptionsSending = Correo saliente
@@ -1386,6 +1387,7 @@ LBL_zimbraFeatureFiltersEnabled = Filtros de correo
 LBL_zimbraFeatureMailForwardingEnabled = Permitir al usuario especificar una direcci\u00f3n de reenv\u00edo
 LBL_zimbraImapEnabled = Acceso IMAP
 LBL_zimbraPop3Enabled = Acceso POP3
+LBL_zimbraFeatureWebClientEnabled = Acceso de cliente web
 LBL_zimbraExternalImapEnabled = Acceso externo IMAP
 LBL_zimbraExternalPop3Enabled = Acceso POP externo
 LBL_zimbraFeatureSharingEnabled = Compartir
@@ -1458,6 +1460,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Al responder, incluir el texto original
 LBL_zimbraPrefForwardIncludeOriginalText = Al reenviar, incluir el texto original
 LBL_zimbraPrefComposeInNewWindow = Siempre redactar en una ventana nueva
 LBL_zimbraPrefForwardReplyInOriginalFormat = Responder/reenviar usando el formato del mensaje original
+LBL_zimbraPrefImapEnabled = Habilitar el acceso IMAP
+LBL_zimbraPrefPop3Enabled = Habilitar el acceso POP
 LBL_zimbraPrefAutoAddAddressEnabled = Activar a\u00f1adido autom\u00e1tico de contactos
 LBL_zimbraPrefMailItemsPerPage = N\u00famero de elementos a mostrar por p\u00e1gina:
 MSG_zimbraPrefMailItemsPerPage = N\u00famero de elementos a mostrar por p\u00e1gina
