--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -1232,6 +1232,7 @@ NAD_MonitorHostServer = Gainbegiratu zerbitzariaren zerbitzaria:
 NAD_GeneralOptions = Aukera orokorrak
 NAD_MailOptions = Posta-aukerak
 NAD_MailOptionsStandardClient = Bertsio estandarra (HTML)
+NAD_PopImapOptions = POP/IMAP aukerak
 NAD_ContactsOptions = Kontaktuen aukerak
 NAD_CalendarOptions = Agendako aukerak
 NAD_MailOptionsSending = Irteerako posta
@@ -1395,6 +1396,7 @@ LBL_zimbraFeatureFiltersEnabled = Posta-iragazkiak
 LBL_zimbraFeatureMailForwardingEnabled = Utzi erabiltzaileari birbidalketa-helbide bat zehazten
 LBL_zimbraImapEnabled = IMAP sarbidea
 LBL_zimbraPop3Enabled = POP3 sarbidea
+LBL_zimbraFeatureWebClientEnabled = Web bezeroaren sarbidea
 LBL_zimbraExternalImapEnabled = Kanpoko IMAP sarbidea
 LBL_zimbraExternalPop3Enabled = Kanpoko POP sarbidea
 LBL_zimbraFeatureSharingEnabled = Partekatzen
@@ -1467,6 +1469,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Erantzutean, bildu jatorrizko testua
 LBL_zimbraPrefForwardIncludeOriginalText = Birbidaltzean, bildu jatorrizko testua
 LBL_zimbraPrefComposeInNewWindow = Idatzi beti beste leiho batean
 LBL_zimbraPrefForwardReplyInOriginalFormat = Erantzun/birbidali jatorrizko mezuaren formatua erabilita
+LBL_zimbraPrefImapEnabled = Gaitu IMAP sarbidea
+LBL_zimbraPrefPop3Enabled = Gaitu POP sarbidea
 LBL_zimbraPrefAutoAddAddressEnabled = Aktibatu helbide-liburua automatikoki gehitzeko aukera
 LBL_zimbraPrefMailItemsPerPage = Orri bakoitzeko bistaratu beharreko elementuen kopurua:
 MSG_zimbraPrefMailItemsPerPage = Orri bakoitzeko bistaratu beharreko elementuen kopurua
