--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -1237,6 +1237,7 @@ NAD_MonitorHostServer = Hosztkiszolg\u00e1l\u00f3 figyel\u00e9se:
 NAD_GeneralOptions = \u00c1ltal\u00e1nos be\u00e1ll\u00edt\u00e1sok
 NAD_MailOptions = Levelez\u00e9si be\u00e1ll\u00edt\u00e1sok
 NAD_MailOptionsStandardClient = Szabv\u00e1nyos (HTML) \u00fcgyf\u00e9l
+NAD_PopImapOptions = POP/IMAP opci\u00f3k
 NAD_ContactsOptions = Partnerek opci\u00f3i
 NAD_CalendarOptions = Napt\u00e1r be\u00e1ll\u00edt\u00e1sai
 NAD_MailOptionsSending = Lev\u00e9lk\u00fcld\u00e9s
@@ -1400,6 +1401,7 @@ LBL_zimbraFeatureFiltersEnabled = Lev\u00e9lsz\u0171r\u0151k
 LBL_zimbraFeatureMailForwardingEnabled = Tov\u00e1bb\u00edt\u00e1si c\u00edm megad\u00e1s\u00e1nak enged\u00e9lyez\u00e9se a felhaszn\u00e1l\u00f3 sz\u00e1m\u00e1ra
 LBL_zimbraImapEnabled = IMAP-hozz\u00e1f\u00e9r\u00e9s
 LBL_zimbraPop3Enabled = POP3-hozz\u00e1f\u00e9r\u00e9s
+LBL_zimbraFeatureWebClientEnabled = Webkliens-hozz\u00e1f\u00e9r\u00e9s
 LBL_zimbraExternalImapEnabled = K\u00fcls\u0151 IMAP-hozz\u00e1f\u00e9r\u00e9s
 LBL_zimbraExternalPop3Enabled = K\u00fcls\u0151 POP-hozz\u00e1f\u00e9r\u00e9s
 LBL_zimbraFeatureSharingEnabled = Megoszt\u00e1s
@@ -1472,6 +1474,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = A v\u00e1laszban szerepeljen az eredeti
 LBL_zimbraPrefForwardIncludeOriginalText = A tov\u00e1bb\u00edtott lev\u00e9lben szerepeljen az eredeti \u00fczenet
 LBL_zimbraPrefComposeInNewWindow = \u00dczenet\u00edr\u00e1s mindig \u00faj ablakban
 LBL_zimbraPrefForwardReplyInOriginalFormat = V\u00e1lasz/tov\u00e1bb\u00edt\u00e1s az eredeti \u00fczenet form\u00e1tum\u00e1nak haszn\u00e1lat\u00e1val
+LBL_zimbraPrefImapEnabled = Enged\u00e9lyezze az IMAP-hozz\u00e1f\u00e9r\u00e9st
+LBL_zimbraPrefPop3Enabled = Enged\u00e9lyezze a POP hozz\u00e1f\u00e9r\u00e9st
 LBL_zimbraPrefAutoAddAddressEnabled = Partnerek automatikus hozz\u00e1ad\u00e1s\u00e1nak enged\u00e9lyez\u00e9se
 LBL_zimbraPrefMailItemsPerPage = Oldalank\u00e9nt megjelen\u00edtend\u0151 elemek sz\u00e1ma:
 MSG_zimbraPrefMailItemsPerPage = Oldalank\u00e9nt megjelen\u00edtend\u0151 elemek sz\u00e1ma
