--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -1240,6 +1240,7 @@ NAD_MonitorHostServer = Pantau server host:
 NAD_GeneralOptions = Opsi Umum
 NAD_MailOptions = Opsi Email
 NAD_MailOptionsStandardClient = Aplikasi (HTML) standar
+NAD_PopImapOptions = POP/IMAP Opsi
 NAD_ContactsOptions = Opsi Kontak
 NAD_CalendarOptions = Opsi Kalender
 NAD_MailOptionsSending = Mengirim email
@@ -1403,6 +1404,7 @@ LBL_zimbraFeatureFiltersEnabled = Filter Email
 LBL_zimbraFeatureMailForwardingEnabled = Izinkan pengguna menentukan alamat penerusan
 LBL_zimbraImapEnabled = Akses IMAP
 LBL_zimbraPop3Enabled = Akses POP3
+LBL_zimbraFeatureWebClientEnabled = Akses Klien Web
 LBL_zimbraExternalImapEnabled = Akses IMAP Eksternal
 LBL_zimbraExternalPop3Enabled = Akses POP Eksternal
 LBL_zimbraFeatureSharingEnabled = Berbagi
@@ -1475,6 +1477,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Saat membalas, sertakan teks asli
 LBL_zimbraPrefForwardIncludeOriginalText = Saat meneruskan, sertakan teks asli
 LBL_zimbraPrefComposeInNewWindow = Selalu tulis di jendela baru
 LBL_zimbraPrefForwardReplyInOriginalFormat = Balas/teruskan dengan format pesan asli
+LBL_zimbraPrefImapEnabled = Aktifkan akses IMAP
+LBL_zimbraPrefPop3Enabled = Aktifkan akses POP
 LBL_zimbraPrefAutoAddAddressEnabled = Aktifkan penambahan kontak otomatis
 LBL_zimbraPrefMailItemsPerPage = Jumlah item yang ditampilkan per halaman:
 MSG_zimbraPrefMailItemsPerPage = Jumlah item yang ditampilkan per halaman
