--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -1210,6 +1210,7 @@ NAD_MonitorHostServer = Server host di monitoraggio:
 NAD_GeneralOptions = Opzioni generali
 NAD_MailOptions = Opzioni Mail
 NAD_MailOptionsStandardClient = Client (HTML) standard
+NAD_PopImapOptions = POP/IMAP Opzioni
 NAD_ContactsOptions = Opzioni contatti
 NAD_CalendarOptions = Opzioni Agenda
 NAD_MailOptionsSending = Invio messaggi
@@ -1373,6 +1374,7 @@ LBL_zimbraFeatureFiltersEnabled = Filtri di posta
 LBL_zimbraFeatureMailForwardingEnabled = Consenti all\u2019utente di specificare un indirizzo di inoltro
 LBL_zimbraImapEnabled = Accesso IMAP
 LBL_zimbraPop3Enabled = Accesso POP3
+LBL_zimbraFeatureWebClientEnabled = Accesso al client Web
 LBL_zimbraExternalImapEnabled = Accesso IMAP esterno
 LBL_zimbraExternalPop3Enabled = Accesso POP esterno
 LBL_zimbraFeatureSharingEnabled = Condivisione
@@ -1445,6 +1447,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Includi testo originale quando rispondi
 LBL_zimbraPrefForwardIncludeOriginalText = Includi testo originale quando inoltri un messaggio
 LBL_zimbraPrefComposeInNewWindow = Componi i messaggi sempre in una nuova finestra
 LBL_zimbraPrefForwardReplyInOriginalFormat = Rispondi/inoltra usando il formato del messaggio originale
+LBL_zimbraPrefImapEnabled = Abilita l\u0027accesso IMAP
+LBL_zimbraPrefPop3Enabled = Abilita l\u0027accesso POP
 LBL_zimbraPrefAutoAddAddressEnabled = Attiva l\u2019aggiunta automatica dei contatti
 LBL_zimbraPrefMailItemsPerPage = Numero di elementi da visualizzare per pagina:
 MSG_zimbraPrefMailItemsPerPage = Numero di elementi da visualizzare per pagina
