--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -1237,6 +1237,7 @@ NAD_MonitorHostServer = \u05e0\u05d9\u05d8\u05d5\u05e8 \u05e9\u05e8\u05ea \u05de
 NAD_GeneralOptions = \u05d0\u05e4\u05e9\u05e8\u05d5\u05d9\u05d5\u05ea \u05db\u05dc\u05dc\u05d9\u05d5\u05ea:
 NAD_MailOptions = \u05d0\u05e4\u05e9\u05e8\u05d5\u05d9\u05d5\u05ea \u05d3\u05d5\u05d0"\u05dc
 NAD_MailOptionsStandardClient = \u05dc\u05e7\u05d5\u05d7 \u05e8\u05d2\u05d9\u05dc (HTML\u200f)
+NAD_PopImapOptions = \u05d0\u05e4\u05e9\u05e8\u05d5\u05d9\u05d5\u05ea POP/IMAP
 NAD_ContactsOptions = \u05d0\u05e4\u05e9\u05e8\u05d5\u05d9\u05d5\u05ea \u05d0\u05e0\u05e9\u05d9 \u05e7\u05e9\u05e8
 NAD_CalendarOptions = \u05d0\u05e4\u05e9\u05e8\u05d5\u05d9\u05d5\u05ea \u05dc\u05d5\u05d7-\u05e9\u05e0\u05d4
 NAD_MailOptionsSending = \u05e9\u05dc\u05d9\u05d7\u05ea \u05d3\u05d5\u05d0"\u05dc
@@ -1400,6 +1401,7 @@ LBL_zimbraFeatureFiltersEnabled = \u05de\u05e1\u05e0\u05e0\u05d9 \u05d3\u05d5\u0
 LBL_zimbraFeatureMailForwardingEnabled = \u05d0\u05e4\u05e9\u05e8 \u05dc\u05de\u05e9\u05ea\u05de\u05e9 \u05dc\u05e6\u05d9\u05d9\u05df \u05db\u05ea\u05d5\u05d1\u05ea \u05dc\u05d4\u05e2\u05d1\u05e8\u05d4
 LBL_zimbraImapEnabled = \u05d2\u05d9\u05e9\u05d4 \u05dc-IMAP\u200f
 LBL_zimbraPop3Enabled = \u05d2\u05d9\u05e9\u05d4 \u05dc-POP3\u200e\u200f
+LBL_zimbraFeatureWebClientEnabled = \u05d2\u05d9\u05e9\u05d4 \u05dc\u05dc\u05e7\u05d5\u05d7 \u05d0\u05d9\u05e0\u05d8\u05e8\u05e0\u05d8
 LBL_zimbraExternalImapEnabled = \u05d2\u05d9\u05e9\u05d4 \u05dc-IMAP \u05d7\u05d9\u05e6\u05d5\u05e0\u05d9
 LBL_zimbraExternalPop3Enabled = \u05d2\u05d9\u05e9\u05d4 \u05dc-POP \u05d7\u05d9\u05e6\u05d5\u05e0\u05d9
 LBL_zimbraFeatureSharingEnabled = \u05e9\u05d9\u05ea\u05d5\u05e3
@@ -1472,6 +1474,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = \u05d1\u05de\u05e2\u05e0\u05d4, \u05db\
 LBL_zimbraPrefForwardIncludeOriginalText = \u05d1\u05d4\u05e2\u05d1\u05e8\u05d4, \u05db\u05dc\u05d5\u05dc \u05d8\u05e7\u05e1\u05d8 \u05de\u05e7\u05d5\u05e8\u05d9
 LBL_zimbraPrefComposeInNewWindow = \u05db\u05ea\u05d5\u05d1 \u05ea\u05de\u05d9\u05d3 \u05d1\u05d7\u05dc\u05d5\u05df \u05d7\u05d3\u05e9
 LBL_zimbraPrefForwardReplyInOriginalFormat = \u05d4\u05e9\u05d1/\u05d4\u05e2\u05d1\u05e8 \u05d1\u05ea\u05d1\u05e0\u05d9\u05ea \u05d4\u05d4\u05d5\u05d3\u05e2\u05d4 \u05d4\u05de\u05e7\u05d5\u05e8\u05d9\u05ea
+LBL_zimbraPrefImapEnabled = \u05d0\u05e4\u05e9\u05e8 \u05d2\u05d9\u05e9\u05d4 \u05dc\u002d IMAP
+LBL_zimbraPrefPop3Enabled = \u05d0\u05e4\u05e9\u05e8 \u05d2\u05d9\u05e9\u05d4 \u05dc\u002d POP
 LBL_zimbraPrefAutoAddAddressEnabled = \u05d4\u05e4\u05e2\u05dc \u05d4\u05d5\u05e1\u05e4\u05d4 \u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea \u05e9\u05dc \u05d0\u05e0\u05e9\u05d9 \u05e7\u05e9\u05e8
 LBL_zimbraPrefMailItemsPerPage = \u05de\u05e1\u05e4\u05e8 \u05d4\u05e4\u05e8\u05d9\u05d8\u05d9\u05dd \u05dc\u05d4\u05e6\u05d2\u05d4 \u05d1\u05db\u05dc \u05d3\u05e3:
 MSG_zimbraPrefMailItemsPerPage = \u05de\u05e1\u05e4\u05e8 \u05d4\u05e4\u05e8\u05d9\u05d8\u05d9\u05dd \u05dc\u05d4\u05e6\u05d2\u05d4 \u05d1\u05db\u05dc \u05d3\u05e3
