--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -1218,6 +1218,7 @@ NAD_MonitorHostServer = \ud638\uc2a4\ud2b8 \uc11c\ubc84 \ubaa8\ub2c8\ud130\ub9c1
 NAD_GeneralOptions = \uc77c\ubc18 \uc635\uc158
 NAD_MailOptions = \uba54\uc77c \uc635\uc158
 NAD_MailOptionsStandardClient = \uc77c\ubc18(HTML) \ud074\ub77c\uc774\uc5b8\ud2b8
+NAD_PopImapOptions = POP/IMAP \uc635\uc158
 NAD_ContactsOptions = \uc5f0\ub77d\ucc98 \uc635\uc158
 NAD_CalendarOptions = \uc77c\uc815\uad00\ub9ac \uc635\uc158
 NAD_MailOptionsSending = \uba54\uc77c \ubcf4\ub0b4\uae30
@@ -1381,6 +1382,7 @@ LBL_zimbraFeatureFiltersEnabled = \uba54\uc77c \ud544\ud130
 LBL_zimbraFeatureMailForwardingEnabled = \uc0ac\uc6a9\uc790\uac00 \uc804\ub2ec \uc8fc\uc18c\ub97c \uc9c0\uc815\ud560 \uc218 \uc788\ub3c4\ub85d \ud5c8\uc6a9
 LBL_zimbraImapEnabled = IMAP \uc561\uc138\uc2a4
 LBL_zimbraPop3Enabled = POP3 \uc561\uc138\uc2a4
+LBL_zimbraFeatureWebClientEnabled = \uc6f9 \ud074\ub77c\uc774\uc5b8\ud2b8 \uc561\uc138\uc2a4
 LBL_zimbraExternalImapEnabled = \uc678\ubd80 IMAP \uc561\uc138\uc2a4
 LBL_zimbraExternalPop3Enabled = \uc678\ubd80 POP \uc561\uc138\uc2a4
 LBL_zimbraFeatureSharingEnabled = \uacf5\uc720
@@ -1453,6 +1455,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = \ub2f5\uc7a5\ud560 \ub54c \uc6d0\ubcf8 
 LBL_zimbraPrefForwardIncludeOriginalText = \uc804\ub2ec\ud560 \ub54c \uc6d0\ubcf8 \ud14d\uc2a4\ud2b8 \ud3ec\ud568
 LBL_zimbraPrefComposeInNewWindow = \ud56d\uc0c1 \uc0c8 \ucc3d\uc5d0\uc11c \uba54\uc77c \uc4f0\uae30
 LBL_zimbraPrefForwardReplyInOriginalFormat = \uc6d0\ubcf8 \uba54\uc2dc\uc9c0 \ud615\uc2dd\uc744 \uc0ac\uc6a9\ud558\uc5ec \ub2f5\uc7a5/\uc804\ub2ec
+LBL_zimbraPrefImapEnabled = IMAP \uc561\uc138\uc2a4 \ud65c\uc131\ud654
+LBL_zimbraPrefPop3Enabled = POP \uc561\uc138\uc2a4 \ud65c\uc131\ud654
 LBL_zimbraPrefAutoAddAddressEnabled = \uc5f0\ub77d\ucc98 \uc790\ub3d9 \ucd94\uac00 \uc0ac\uc6a9
 LBL_zimbraPrefMailItemsPerPage = \ud398\uc774\uc9c0\ub2f9 \ud45c\uc2dc\ud560 \ud56d\ubaa9 \uc218:
 MSG_zimbraPrefMailItemsPerPage = \ud55c \ud398\uc774\uc9c0\uc5d0 \ud45c\uc2dc\ud560 \ud56d\ubaa9 \uac1c\uc218
