--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -1237,6 +1237,7 @@ NAD_MonitorHostServer = Pantau pelayan hos:
 NAD_GeneralOptions = Opsyen Umum
 NAD_MailOptions = Opsyen Mel
 NAD_MailOptionsStandardClient = Pelanggan Standard (HTML)
+NAD_PopImapOptions = Pilihan POP/IMAP
 NAD_ContactsOptions = Opsyen Kenalan
 NAD_CalendarOptions = Opsyen Kalendar
 NAD_MailOptionsSending = Menghantar mel
@@ -1400,6 +1401,7 @@ LBL_zimbraFeatureFiltersEnabled = Penapis Mel
 LBL_zimbraFeatureMailForwardingEnabled = Benarkan pengguna menentukan alamat pemajuan
 LBL_zimbraImapEnabled = Capaian IMAP
 LBL_zimbraPop3Enabled = Capaian POP3
+LBL_zimbraFeatureWebClientEnabled = Akses Pelanggan Web
 LBL_zimbraExternalImapEnabled = Capaian IMAP luaran
 LBL_zimbraExternalPop3Enabled = Capaian POP luaran
 LBL_zimbraFeatureSharingEnabled = Perkongsian
@@ -1472,6 +1474,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Apabila membalas, sertakan teks asal
 LBL_zimbraPrefForwardIncludeOriginalText = Apabila memajukan, sertakan teks asal
 LBL_zimbraPrefComposeInNewWindow = Sentiasa mengarang dalam tetingkap baharu
 LBL_zimbraPrefForwardReplyInOriginalFormat = Balas/majukan menggunakan format mesej asal
+LBL_zimbraPrefImapEnabled = Dayakan akses IMAP
+LBL_zimbraPrefPop3Enabled = Dayakan akses POP
 LBL_zimbraPrefAutoAddAddressEnabled = Dayakan penambahan kenalan secara automatik
 LBL_zimbraPrefMailItemsPerPage = Bilangan item untuk dipaparkan bagi setiap halaman:
 MSG_zimbraPrefMailItemsPerPage = Bilangan item untuk dipaparkan bagi setiap halaman
