--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -1210,6 +1210,7 @@ NAD_MonitorHostServer = Hostserver controleren:
 NAD_GeneralOptions = Algemene opties
 NAD_MailOptions = E-mailopties
 NAD_MailOptionsStandardClient = Standaard-client (HTML)
+NAD_PopImapOptions = POP/IMAP-opties
 NAD_ContactsOptions = Contactopties
 NAD_CalendarOptions = Agendaopties
 NAD_MailOptionsSending = E-mail verzenden
@@ -1373,6 +1374,7 @@ LBL_zimbraFeatureFiltersEnabled = E-mailfilters
 LBL_zimbraFeatureMailForwardingEnabled = Gebruiker toestaan doorstuuradres op te geven
 LBL_zimbraImapEnabled = IMAP-toegang
 LBL_zimbraPop3Enabled = POP3-toegang
+LBL_zimbraFeatureWebClientEnabled = Toegang tot webclient
 LBL_zimbraExternalImapEnabled = Externe IMAP-toegang
 LBL_zimbraExternalPop3Enabled = Externe POP-toegang
 LBL_zimbraFeatureSharingEnabled = Delen
@@ -1445,6 +1447,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Bij antwoorden oorspronkelijke tekst bi
 LBL_zimbraPrefForwardIncludeOriginalText = Bij doorsturen oorspronkelijke tekst meezenden
 LBL_zimbraPrefComposeInNewWindow = Altijd opstellen in een nieuw venster
 LBL_zimbraPrefForwardReplyInOriginalFormat = Beantwoorden/doorsturen met opmaak van het oorspronkelijke bericht
+LBL_zimbraPrefImapEnabled = Schakel IMAP-toegang in
+LBL_zimbraPrefPop3Enabled = Schakel POP-toegang in
 LBL_zimbraPrefAutoAddAddressEnabled = Automatisch toevoegen van contacten inschakelen
 LBL_zimbraPrefMailItemsPerPage = Aantal items per pagina weergeven:
 MSG_zimbraPrefMailItemsPerPage = Aantal items per pagina weergeven
