--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -1240,6 +1240,7 @@ NAD_MonitorHostServer = Overv\u00e5k vertsserver:
 NAD_GeneralOptions = Generelle alternativer
 NAD_MailOptions = E-postalternativer
 NAD_MailOptionsStandardClient = Standardklient (HTML)
+NAD_PopImapOptions = POP/IMAP-alternativer
 NAD_ContactsOptions = Kontaktalternativer
 NAD_CalendarOptions = Kalenderalternativer
 NAD_MailOptionsSending = Sending av e-post
@@ -1403,6 +1404,7 @@ LBL_zimbraFeatureFiltersEnabled = E-postfiltre
 LBL_zimbraFeatureMailForwardingEnabled = Tillat at brukeren angir en videresendingsadresse
 LBL_zimbraImapEnabled = IMAP-tilgang
 LBL_zimbraPop3Enabled = POP3-tilgang
+LBL_zimbraFeatureWebClientEnabled = Nettklienttilgang
 LBL_zimbraExternalImapEnabled = Ekstern IMAP-tilgang
 LBL_zimbraExternalPop3Enabled = Ekstern POP-tilgang
 LBL_zimbraFeatureSharingEnabled = Deling
@@ -1475,6 +1477,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Inkluder originaltekst ved svar
 LBL_zimbraPrefForwardIncludeOriginalText = Inkluder originaltekst ved videresending
 LBL_zimbraPrefComposeInNewWindow = Skriv alltid i nytt vindu
 LBL_zimbraPrefForwardReplyInOriginalFormat = Svar/videresend med samme format som opprinnelig melding
+LBL_zimbraPrefImapEnabled = Aktiver IMAP-tilgang
+LBL_zimbraPrefPop3Enabled = Aktiver POP-tilgang
 LBL_zimbraPrefAutoAddAddressEnabled = Aktiver automatisk tilf\u00f8yelse av kontakter
 LBL_zimbraPrefMailItemsPerPage = Antall elementer som skal vises per side:
 MSG_zimbraPrefMailItemsPerPage = Antall elementer som skal vises per side
