--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -1230,6 +1230,7 @@ NAD_MonitorHostServer = Monitoruj serwer:
 NAD_GeneralOptions = Ustawienia og\u00f3lne
 NAD_MailOptions = Ustawienia Poczty
 NAD_MailOptionsStandardClient = Klient standardowy (HTML)
+NAD_PopImapOptions = Opcje POP/IMAP
 NAD_ContactsOptions = Opcje kontakt\u00f3w
 NAD_CalendarOptions = Ustawienia kalendarza
 NAD_MailOptionsSending = Wysy\u0142anie poczty
@@ -1393,6 +1394,7 @@ LBL_zimbraFeatureFiltersEnabled = Filtry poczty
 LBL_zimbraFeatureMailForwardingEnabled = Pozw\u00f3l u\u017cytkownikowi na okre\u015blenie adres\u00f3w przekazywania
 LBL_zimbraImapEnabled = Dost\u0119p IMAP
 LBL_zimbraPop3Enabled = Dost\u0119p POP3
+LBL_zimbraFeatureWebClientEnabled = Dost\u0119p klienta WWW
 LBL_zimbraExternalImapEnabled = Zewn\u0119trzny dost\u0119p IMAP
 LBL_zimbraExternalPop3Enabled = Zewn\u0119trzny dost\u0119p POP
 LBL_zimbraFeatureSharingEnabled = Udost\u0119pnianie
@@ -1465,6 +1467,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Przy odpowiedzi za\u0142\u0105cz orygin
 LBL_zimbraPrefForwardIncludeOriginalText = Przy przekazywaniu za\u0142\u0105cz oryginaln\u0105 tre\u015b\u0107 wiadomo\u015bci
 LBL_zimbraPrefComposeInNewWindow = Zawsze tw\u00f3rz wiadomo\u015bci w nowym oknie
 LBL_zimbraPrefForwardReplyInOriginalFormat = Odpowiedz/przeka\u017c, u\u017cywaj\u0105c formatu oryginalnej wiadomo\u015bci
+LBL_zimbraPrefImapEnabled = W\u0142\u0105cz dost\u0119p IMAP
+LBL_zimbraPrefPop3Enabled = W\u0142\u0105cz dost\u0119p POP
 LBL_zimbraPrefAutoAddAddressEnabled = W\u0142\u0105cz automatyczne dodawanie kontakt\u00f3w
 LBL_zimbraPrefMailItemsPerPage = Liczba element\u00f3w dost\u0119pnych na stronie:
 MSG_zimbraPrefMailItemsPerPage = Liczba element\u00f3w wy\u015bwietlanych na stronie
