--- a/WebRoot/messages/ZaMsg_pt.properties
+++ b/WebRoot/messages/ZaMsg_pt.properties
@@ -1240,6 +1240,7 @@ NAD_MonitorHostServer = Monitorizar servidor-anfitri\u00e3o:
 NAD_GeneralOptions = Op\u00e7\u00f5es gerais
 NAD_MailOptions = Op\u00e7\u00f5es de correio
 NAD_MailOptionsStandardClient = Programa-cliente padr\u00e3o (HTML)
+NAD_PopImapOptions = Op\u00e7\u00f5es POP/IMAP
 NAD_ContactsOptions = Op\u00e7\u00f5es dos contactos
 NAD_CalendarOptions = Op\u00e7\u00f5es do calend\u00e1rio
 NAD_MailOptionsSending = A enviar correio
@@ -1403,6 +1404,7 @@ LBL_zimbraFeatureFiltersEnabled = Filtros de correio
 LBL_zimbraFeatureMailForwardingEnabled = Permitir que o utilizador especifique um endere\u00e7o de reencaminhamento
 LBL_zimbraImapEnabled = Acesso de IMAP
 LBL_zimbraPop3Enabled = Acesso de POP3
+LBL_zimbraFeatureWebClientEnabled = Acesso de cliente web
 LBL_zimbraExternalImapEnabled = Acesso de IMAP externo
 LBL_zimbraExternalPop3Enabled = Acesso de POP externo
 LBL_zimbraFeatureSharingEnabled = Partilha
@@ -1475,6 +1477,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Ao responder, incluir o texto original
 LBL_zimbraPrefForwardIncludeOriginalText = Ao reencaminhar, incluir o texto original
 LBL_zimbraPrefComposeInNewWindow = Escrever sempre numa nova janela
 LBL_zimbraPrefForwardReplyInOriginalFormat = Responder/reencaminhar utilizando o formato da mensagem original
+LBL_zimbraPrefImapEnabled = Habilitar acesso IMAP
+LBL_zimbraPrefPop3Enabled = Permitir acesso POP
 LBL_zimbraPrefAutoAddAddressEnabled = Ativar adi\u00e7\u00e3o autom\u00e1tica de contactos
 LBL_zimbraPrefMailItemsPerPage = N\u00famero de itens a apresentar por p\u00e1gina:
 MSG_zimbraPrefMailItemsPerPage = N\u00famero de itens a apresentar por p\u00e1gina
