--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -1209,6 +1209,7 @@ NAD_MonitorHostServer = Monitorar o servidor:
 NAD_GeneralOptions = Op\u00e7\u00f5es gerais
 NAD_MailOptions = Op\u00e7\u00f5es de e-mail
 NAD_MailOptionsStandardClient = Cliente padr\u00e3o (HTML)
+NAD_PopImapOptions = Op\u00e7\u00f5es POP/IMAP
 NAD_ContactsOptions = Op\u00e7\u00f5es dos contatos
 NAD_CalendarOptions = Op\u00e7\u00f5es da agenda
 NAD_MailOptionsSending = Envio de e-mails
@@ -1372,6 +1373,7 @@ LBL_zimbraFeatureFiltersEnabled = Filtros de e-mail
 LBL_zimbraFeatureMailForwardingEnabled = Permitir que o usu\u00e1rio especifique um endere\u00e7o de encaminhamento
 LBL_zimbraImapEnabled = Acesso ao IMAP
 LBL_zimbraPop3Enabled = Acesso POP3
+LBL_zimbraFeatureWebClientEnabled = Acesso de cliente web
 LBL_zimbraExternalImapEnabled = Acesso ao IMAP externo
 LBL_zimbraExternalPop3Enabled = Acesso POP externo
 LBL_zimbraFeatureSharingEnabled = Compartilhamento
@@ -1444,6 +1446,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Ao responder, incluir o texto original
 LBL_zimbraPrefForwardIncludeOriginalText = Ao encaminhar a mensagem, incluir o texto original
 LBL_zimbraPrefComposeInNewWindow = Sempre escrever e-mail em uma nova janela
 LBL_zimbraPrefForwardReplyInOriginalFormat = Responder/encaminhar usando o formato da mensagem original
+LBL_zimbraPrefImapEnabled = Habilitar acesso IMAP
+LBL_zimbraPrefPop3Enabled = Permitir acesso POP
 LBL_zimbraPrefAutoAddAddressEnabled = Ativar a inclus\u00e3o autom\u00e1tica de contatos
 LBL_zimbraPrefMailItemsPerPage = N\u00famero de itens a serem exibidos por p\u00e1gina:
 MSG_zimbraPrefMailItemsPerPage = N\u00famero de itens a serem exibidos por p\u00e1gina
