--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -1237,6 +1237,7 @@ NAD_MonitorHostServer = Monitorizare server gazd\u0103:
 NAD_GeneralOptions = Op\u0163iuni generale
 NAD_MailOptions = Op\u0163iuni pentru mesaje
 NAD_MailOptionsStandardClient = Client standard (HTML)
+NAD_PopImapOptions = Op\u0163iuni POP/IMAP
 NAD_ContactsOptions = Op\u0163iuni pentru contacte
 NAD_CalendarOptions = Op\u0163iuni calendar
 NAD_MailOptionsSending = Trimitere mesaje
@@ -1400,6 +1401,7 @@ LBL_zimbraFeatureFiltersEnabled = Filtre de mesaje
 LBL_zimbraFeatureMailForwardingEnabled = Permite utilizatorului s\u0103 indice o adres\u0103 de redirec\u0163ionare
 LBL_zimbraImapEnabled = Acces prin IMAP
 LBL_zimbraPop3Enabled = Acces prin POP3
+LBL_zimbraFeatureWebClientEnabled = Acces client Web
 LBL_zimbraExternalImapEnabled = Acces extern prin IMAP
 LBL_zimbraExternalPop3Enabled = Acces extern prin POP
 LBL_zimbraFeatureSharingEnabled = Partajare
@@ -1472,6 +1474,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Se include textul original \u00een r\u0
 LBL_zimbraPrefForwardIncludeOriginalText = Se include textul original la redirec\u0163ionare
 LBL_zimbraPrefComposeInNewWindow = Compunere \u00eentotdeauna \u00een fereastr\u0103 nou\u0103
 LBL_zimbraPrefForwardReplyInOriginalFormat = R\u0103spuns/redirec\u0163ionare \u00een formatul mesajului original
+LBL_zimbraPrefImapEnabled = Activa\u021bi accesul IMAP
+LBL_zimbraPrefPop3Enabled = Activa\u021bi accesul POP
 LBL_zimbraPrefAutoAddAddressEnabled = Activare ad\u0103ugare automat\u0103 persoane de contact
 LBL_zimbraPrefMailItemsPerPage = Num\u0103r elemente afi\u015fate pe o pagin\u0103:
 MSG_zimbraPrefMailItemsPerPage = Num\u0103r elemente afi\u015fate pe o pagin\u0103
