--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -1237,6 +1237,7 @@ NAD_MonitorHostServer = Nadziraj gostiteljski stre\u017enik:
 NAD_GeneralOptions = Splo\u0161ne mo\u017enosti
 NAD_MailOptions = Po\u0161tne mo\u017enosti
 NAD_MailOptionsStandardClient = Standardni (HTML) odjemalec
+NAD_PopImapOptions = Mo\u017enosti POP/IMAP
 NAD_ContactsOptions = Mo\u017enosti stikov
 NAD_CalendarOptions = Mo\u017enosti za koledar
 NAD_MailOptionsSending = Po\u0161iljanje po\u0161te
@@ -1400,6 +1401,7 @@ LBL_zimbraFeatureFiltersEnabled = Po\u0161tni filtri
 LBL_zimbraFeatureMailForwardingEnabled = Dovoli uporabniku, da dolo\u010di naslov za posredovanje
 LBL_zimbraImapEnabled = IMAP dostop
 LBL_zimbraPop3Enabled = POP3 dostop
+LBL_zimbraFeatureWebClientEnabled = Dostop do spletnih odjemalcev
 LBL_zimbraExternalImapEnabled = Zunanji IMAP dostop
 LBL_zimbraExternalPop3Enabled = Zunanji POP dostop
 LBL_zimbraFeatureSharingEnabled = Skupna raba
@@ -1472,6 +1474,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Pri odgovarjanju vklju\u010di izvirno b
 LBL_zimbraPrefForwardIncludeOriginalText = Pri posredovanju vklju\u010di izvirno besedilo
 LBL_zimbraPrefComposeInNewWindow = Vedno sestavi v novem oknu
 LBL_zimbraPrefForwardReplyInOriginalFormat = Pri odgovarjanju/posredovanju uporabi obliko izvirnega sporo\u010dila
+LBL_zimbraPrefImapEnabled = Omogo\u010dite dostop IMAP
+LBL_zimbraPrefPop3Enabled = Omogo\u010di dostop POP
 LBL_zimbraPrefAutoAddAddressEnabled = Omogo\u010di samodejno dodajanje stikov
 LBL_zimbraPrefMailItemsPerPage = \u0160tevilo elementov za prikaz na strani:
 MSG_zimbraPrefMailItemsPerPage = \u0160tevilo elementov za prikaz na strani
