--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -1210,6 +1210,7 @@ NAD_MonitorHostServer = \u00d6vervaka v\u00e4rdserver:
 NAD_GeneralOptions = Allm\u00e4nna alternativ
 NAD_MailOptions = E-postalternativ
 NAD_MailOptionsStandardClient = Standard (HTML)-klient
+NAD_PopImapOptions = POP/IMAP-alternativ
 NAD_ContactsOptions = Alternativ f\u00f6r kontakter
 NAD_CalendarOptions = Alternativ f\u00f6r kalender
 NAD_MailOptionsSending = Skicka e-post
@@ -1373,6 +1374,7 @@ LBL_zimbraFeatureFiltersEnabled = E-postfilter
 LBL_zimbraFeatureMailForwardingEnabled = Till\u00e5t anv\u00e4ndaren att ange en adress f\u00f6r vidarebefordran
 LBL_zimbraImapEnabled = IMAP-\u00e5tkomst
 LBL_zimbraPop3Enabled = POP3-\u00e5tkomst
+LBL_zimbraFeatureWebClientEnabled = Webklient\u00e5tkomst
 LBL_zimbraExternalImapEnabled = Extern IMAP-\u00e5tkomst
 LBL_zimbraExternalPop3Enabled = Extern POP-\u00e5tkomst
 LBL_zimbraFeatureSharingEnabled = Delning
@@ -1445,6 +1447,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Inkludera originaltext vid svar
 LBL_zimbraPrefForwardIncludeOriginalText = Inkludera originaltext vid vidarebefordran
 LBL_zimbraPrefComposeInNewWindow = Skriv alltid i nytt f\u00f6nster
 LBL_zimbraPrefForwardReplyInOriginalFormat = Svara/vidarebefordra med samma format som i originalmeddelandet
+LBL_zimbraPrefImapEnabled = Aktivera IMAP-\u00e5tkomst
+LBL_zimbraPrefPop3Enabled = Aktivera POP-\u00e5tkomst
 LBL_zimbraPrefAutoAddAddressEnabled = Aktivera automatiskt till\u00e4gg av kontakter
 LBL_zimbraPrefMailItemsPerPage = Antal objekt som ska visas per sida:
 MSG_zimbraPrefMailItemsPerPage = Antal objekt som ska visas per sida
