--- a/WebRoot/messages/ZaMsg_th.properties
+++ b/WebRoot/messages/ZaMsg_th.properties
@@ -1235,6 +1235,7 @@ NAD_MonitorHostServer = \u0e15\u0e23\u0e27\u0e08\u0e2a\u0e2d\u0e1a\u0e40\u0e0b\u
 NAD_GeneralOptions = \u0e15\u0e31\u0e27\u0e40\u0e25\u0e37\u0e2d\u0e01\u0e17\u0e31\u0e48\u0e27\u0e44\u0e1b
 NAD_MailOptions = \u0e15\u0e31\u0e27\u0e40\u0e25\u0e37\u0e2d\u0e01\u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22
 NAD_MailOptionsStandardClient = \u0e44\u0e04\u0e25\u0e40\u0e2d\u0e47\u0e19\u0e15\u0e4c\u0e21\u0e32\u0e15\u0e23\u0e10\u0e32\u0e19 (HTML)
+NAD_PopImapOptions = \u0e15\u0e31\u0e27\u0e40\u0e25\u0e37\u0e2d\u0e01 POP/IMAP
 NAD_ContactsOptions = \u0e15\u0e31\u0e27\u0e40\u0e25\u0e37\u0e2d\u0e01\u0e1c\u0e39\u0e49\u0e15\u0e34\u0e14\u0e15\u0e48\u0e2d
 NAD_CalendarOptions = \u0e15\u0e31\u0e27\u0e40\u0e25\u0e37\u0e2d\u0e01\u0e1b\u0e0f\u0e34\u0e17\u0e34\u0e19
 NAD_MailOptionsSending = \u0e01\u0e32\u0e23\u0e2a\u0e48\u0e07\u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22
@@ -1398,6 +1399,7 @@ LBL_zimbraFeatureFiltersEnabled = \u0e15\u0e31\u0e27\u0e01\u0e23\u0e2d\u0e07\u0e
 LBL_zimbraFeatureMailForwardingEnabled = \u0e2d\u0e19\u0e38\u0e0d\u0e32\u0e15\u0e43\u0e2b\u0e49\u0e1c\u0e39\u0e49\u0e43\u0e0a\u0e49\u0e23\u0e30\u0e1a\u0e38\u0e17\u0e35\u0e48\u0e2d\u0e22\u0e39\u0e48\u0e43\u0e19\u0e01\u0e32\u0e23\u0e2a\u0e48\u0e07\u0e15\u0e48\u0e2d
 LBL_zimbraImapEnabled = \u0e01\u0e32\u0e23\u0e40\u0e02\u0e49\u0e32\u0e16\u0e36\u0e07 IMAP
 LBL_zimbraPop3Enabled = \u0e01\u0e32\u0e23\u0e40\u0e02\u0e49\u0e32\u0e16\u0e36\u0e07 POP3
+LBL_zimbraFeatureWebClientEnabled = \u0e01\u0e32\u0e23\u0e40\u0e02\u0e49\u0e32\u0e16\u0e36\u0e07\u0e44\u0e04\u0e25\u0e40\u0e2d\u0e19\u0e15\u0e4c\u0e40\u0e27\u0e47\u0e1a
 LBL_zimbraExternalImapEnabled = \u0e01\u0e32\u0e23\u0e40\u0e02\u0e49\u0e32\u0e16\u0e36\u0e07 IMAP \u0e20\u0e32\u0e22\u0e19\u0e2d\u0e01
 LBL_zimbraExternalPop3Enabled = \u0e01\u0e32\u0e23\u0e40\u0e02\u0e49\u0e32\u0e16\u0e36\u0e07 POP \u0e20\u0e32\u0e22\u0e19\u0e2d\u0e01
 LBL_zimbraFeatureSharingEnabled = \u0e01\u0e32\u0e23\u0e43\u0e0a\u0e49\u0e23\u0e48\u0e27\u0e21\u0e01\u0e31\u0e19
@@ -1470,6 +1472,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = \u0e40\u0e21\u0e37\u0e48\u0e2d\u0e15\u0
 LBL_zimbraPrefForwardIncludeOriginalText = \u0e40\u0e21\u0e37\u0e48\u0e2d\u0e2a\u0e48\u0e07\u0e15\u0e48\u0e2d \u0e43\u0e2b\u0e49\u0e23\u0e27\u0e21\u0e02\u0e49\u0e2d\u0e04\u0e27\u0e32\u0e21\u0e15\u0e49\u0e19\u0e09\u0e1a\u0e31\u0e1a
 LBL_zimbraPrefComposeInNewWindow = \u0e40\u0e02\u0e35\u0e22\u0e19\u0e43\u0e19\u0e2b\u0e19\u0e49\u0e32\u0e15\u0e48\u0e32\u0e07\u0e43\u0e2b\u0e21\u0e48\u0e40\u0e2a\u0e21\u0e2d
 LBL_zimbraPrefForwardReplyInOriginalFormat = \u0e15\u0e2d\u0e1a\u0e01\u0e25\u0e31\u0e1a/\u0e2a\u0e48\u0e07\u0e15\u0e48\u0e2d\u0e42\u0e14\u0e22\u0e43\u0e0a\u0e49\u0e23\u0e39\u0e1b\u0e41\u0e1a\u0e1a\u0e02\u0e2d\u0e07\u0e02\u0e49\u0e2d\u0e04\u0e27\u0e32\u0e21\u0e15\u0e49\u0e19\u0e09\u0e1a\u0e31\u0e1a
+LBL_zimbraPrefImapEnabled = \u0e40\u0e1b\u0e34\u0e14\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19\u0e01\u0e32\u0e23\u0e40\u0e02\u0e49\u0e32\u0e16\u0e36\u0e07 IMAP
+LBL_zimbraPrefPop3Enabled = \u0e40\u0e1b\u0e34\u0e14\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19\u0e01\u0e32\u0e23\u0e40\u0e02\u0e49\u0e32\u0e16\u0e36\u0e07 POP
 LBL_zimbraPrefAutoAddAddressEnabled = \u0e40\u0e1b\u0e34\u0e14\u0e43\u0e0a\u0e49\u0e07\u0e32\u0e19\u0e01\u0e32\u0e23\u0e40\u0e1e\u0e34\u0e48\u0e21\u0e23\u0e32\u0e22\u0e0a\u0e37\u0e48\u0e2d\u0e1c\u0e39\u0e49\u0e15\u0e34\u0e14\u0e15\u0e48\u0e2d\u0e42\u0e14\u0e22\u0e2d\u0e31\u0e15\u0e42\u0e19\u0e21\u0e31\u0e15\u0e34
 LBL_zimbraPrefMailItemsPerPage = \u0e08\u0e33\u0e19\u0e27\u0e19\u0e23\u0e32\u0e22\u0e01\u0e32\u0e23\u0e17\u0e35\u0e48\u0e08\u0e30\u0e41\u0e2a\u0e14\u0e07\u0e15\u0e48\u0e2d\u0e2b\u0e19\u0e49\u0e32:
 MSG_zimbraPrefMailItemsPerPage = \u0e08\u0e33\u0e19\u0e27\u0e19\u0e23\u0e32\u0e22\u0e01\u0e32\u0e23\u0e17\u0e35\u0e48\u0e08\u0e30\u0e41\u0e2a\u0e14\u0e07\u0e15\u0e48\u0e2d\u0e2b\u0e19\u0e49\u0e32
