--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -1235,6 +1235,7 @@ NAD_MonitorHostServer = Anasistem sunucusunu izle:
 NAD_GeneralOptions = Genel Se\u00e7enekler
 NAD_MailOptions = Posta Se\u00e7enekleri
 NAD_MailOptionsStandardClient = Standart (HTML) istemcisi
+NAD_PopImapOptions = POP/IMAP Se\u00e7enekleri
 NAD_ContactsOptions = Ki\u015fi Se\u00e7enekleri
 NAD_CalendarOptions = Takvim Se\u00e7enekleri
 NAD_MailOptionsSending = Posta g\u00f6nderme
@@ -1398,6 +1399,7 @@ LBL_zimbraFeatureFiltersEnabled = Posta Filtreleri
 LBL_zimbraFeatureMailForwardingEnabled = Kullan\u0131c\u0131n\u0131n iletme adresi belirlemesine izin ver
 LBL_zimbraImapEnabled = IMAP eri\u015fimi
 LBL_zimbraPop3Enabled = POP3 eri\u015fimi
+LBL_zimbraFeatureWebClientEnabled = Web \u0130stemcisi eri\u015fimi
 LBL_zimbraExternalImapEnabled = D\u0131\u015f IMAP eri\u015fimi
 LBL_zimbraExternalPop3Enabled = D\u0131\u015f POP eri\u015fimi
 LBL_zimbraFeatureSharingEnabled = Payla\u015f\u0131m
@@ -1470,6 +1472,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Yan\u0131t verirken \u00f6zg\u00fcn met
 LBL_zimbraPrefForwardIncludeOriginalText = \u0130letirken \u00f6zg\u00fcn metni ekle
 LBL_zimbraPrefComposeInNewWindow = Her zaman yeni pencerede olu\u015ftur
 LBL_zimbraPrefForwardReplyInOriginalFormat = \u00d6zg\u00fcn mesaj\u0131n bi\u00e7imini kullanarak yan\u0131tla/ilet
+LBL_zimbraPrefImapEnabled = IMAP eri\u015fimini etkinle\u015ftirin
+LBL_zimbraPrefPop3Enabled = POP eri\u015fimini etkinle\u015ftirin
 LBL_zimbraPrefAutoAddAddressEnabled = Ki\u015fileri otomatik eklemeyi etkinle\u015ftir
 LBL_zimbraPrefMailItemsPerPage = Sayfada g\u00f6r\u00fcnt\u00fclenecek \u00f6\u011fe say\u0131s\u0131:
 MSG_zimbraPrefMailItemsPerPage = Sayfada g\u00f6r\u00fcnt\u00fclenecek \u00f6\u011fe say\u0131s\u0131
