--- a/WebRoot/messages/ZaMsg_vi.properties
+++ b/WebRoot/messages/ZaMsg_vi.properties
@@ -1240,6 +1240,7 @@ NAD_MonitorHostServer = Gi\u00e1m s\u00e1t m\u00e1y ch\u1ee7 d\u1ecbch v\u1ee5:
 NAD_GeneralOptions = T\u00f9y ch\u1ecdn chung
 NAD_MailOptions = T\u00f9y ch\u1ecdn th\u01b0
 NAD_MailOptionsStandardClient = \u1ee8ng d\u1ee5ng kh\u00e1ch chu\u1ea9n (HTML)
+NAD_PopImapOptions = T\u00f9y ch\u1ecdn POP/IMAP
 NAD_ContactsOptions = T\u00f9y ch\u1ecdn danh b\u1ea1
 NAD_CalendarOptions = Tu\u1ef3 ch\u1ecdn l\u1ecbch bi\u1ec3u
 NAD_MailOptionsSending = G\u1eedi th\u01b0
@@ -1403,6 +1404,7 @@ LBL_zimbraFeatureFiltersEnabled = B\u1ed9 l\u1ecdc th\u01b0
 LBL_zimbraFeatureMailForwardingEnabled = Cho ph\u00e9p ng\u01b0\u1eddi d\u00f9ng ch\u1ec9 \u0111\u1ecbnh m\u1ed9t \u0111\u1ecba ch\u1ec9 chuy\u1ec3n ti\u1ebfp
 LBL_zimbraImapEnabled = Truy c\u1eadp IMAP
 LBL_zimbraPop3Enabled = Truy c\u1eadp POP3
+LBL_zimbraFeatureWebClientEnabled = Truy c\u1eadp \u1ee9ng d\u1ee5ng kh\u00e1ch web
 LBL_zimbraExternalImapEnabled = Truy c\u1eadp IMAP ngo\u00e0i
 LBL_zimbraExternalPop3Enabled = Truy c\u1eadp POP ngo\u00e0i
 LBL_zimbraFeatureSharingEnabled = Chia s\u1ebb
@@ -1475,6 +1477,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Khi tr\u1ea3 l\u1eddi, bao g\u1ed3m ph\
 LBL_zimbraPrefForwardIncludeOriginalText = Khi chuy\u1ec3n ti\u1ebfp, bao g\u1ed3m ph\u1ea7n v\u0103n b\u1ea3n g\u1ed1c
 LBL_zimbraPrefComposeInNewWindow = Lu\u00f4n so\u1ea1n th\u01b0 trong c\u1eeda s\u1ed5 m\u1edbi
 LBL_zimbraPrefForwardReplyInOriginalFormat = Tr\u1ea3 l\u1eddi/chuy\u1ec3n ti\u1ebfp s\u1eed d\u1ee5ng \u0111\u1ecbnh d\u1ea1ng c\u1ee7a th\u01b0 g\u1ed1c
+LBL_zimbraPrefImapEnabled = B\u1eadt quy\u1ec1n truy c\u1eadp IMAP
+LBL_zimbraPrefPop3Enabled = B\u1eadt quy\u1ec1n truy c\u1eadp POP
 LBL_zimbraPrefAutoAddAddressEnabled = Cho ph\u00e9p t\u1ef1 \u0111\u1ed9ng th\u00eam s\u1ed1 li\u00ean h\u1ec7
 LBL_zimbraPrefMailItemsPerPage = S\u1ed1 m\u1ee5c hi\u1ec3n th\u1ecb tr\u00ean m\u1ed7i trang:
 MSG_zimbraPrefMailItemsPerPage = S\u1ed1 m\u1ee5c hi\u1ec3n th\u1ecb tr\u00ean m\u1ed7i trang
