--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -1229,6 +1229,7 @@ NAD_MonitorHostServer = \u76d1\u89c6\u4e3b\u673a\u670d\u52a1\u5668\uff1a
 NAD_GeneralOptions = \u4e00\u822c\u9009\u9879
 NAD_MailOptions = \u90ae\u4ef6\u9009\u9879
 NAD_MailOptionsStandardClient = \u6807\u51c6 (HTML) \u5ba2\u6237\u7aef
+NAD_PopImapOptions = POP/IMAP \u9009\u9879
 NAD_ContactsOptions = \u8054\u7cfb\u4eba\u9009\u9879
 NAD_CalendarOptions = \u65e5\u5386\u9009\u9879
 NAD_MailOptionsSending = \u53d1\u9001\u90ae\u4ef6
@@ -1392,6 +1393,7 @@ LBL_zimbraFeatureFiltersEnabled = \u90ae\u4ef6\u8fc7\u6ee4\u5668
 LBL_zimbraFeatureMailForwardingEnabled = \u5141\u8bb8\u7528\u6237\u6307\u5b9a\u8f6c\u53d1\u5730\u5740
 LBL_zimbraImapEnabled = IMAP \u5b58\u53d6
 LBL_zimbraPop3Enabled = POP3 \u5b58\u53d6
+LBL_zimbraFeatureWebClientEnabled = \u0057\u0065\u0062\u5ba2\u6237\u7aef\u8bbf\u95ee
 LBL_zimbraExternalImapEnabled = \u5916\u90e8 IMAP \u5b58\u53d6
 LBL_zimbraExternalPop3Enabled = \u5916\u90e8 POP \u5b58\u53d6
 LBL_zimbraFeatureSharingEnabled = \u5171\u4eab
@@ -1464,6 +1466,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = \u56de\u590d\u65f6\u5305\u62ec\u539f\u5
 LBL_zimbraPrefForwardIncludeOriginalText = \u8f6c\u53d1\u65f6\u5305\u62ec\u539f\u59cb\u6587\u672c
 LBL_zimbraPrefComposeInNewWindow = \u6bcf\u6b21\u5199\u4fe1\u65f6\u90fd\u6253\u5f00\u4e00\u4e2a\u65b0\u7a97\u53e3
 LBL_zimbraPrefForwardReplyInOriginalFormat = \u56de\u590d/\u8f6c\u53d1\u65f6\u4f7f\u7528\u539f\u59cb\u90ae\u4ef6\u7684\u683c\u5f0f
+LBL_zimbraPrefImapEnabled = \u542f\u7528IMAP\u8bbf\u95ee
+LBL_zimbraPrefPop3Enabled = \u542f\u7528POP\u8bbf\u95ee
 LBL_zimbraPrefAutoAddAddressEnabled = \u542f\u7528\u81ea\u52a8\u6dfb\u52a0\u8054\u7cfb\u4eba\u529f\u80fd
 LBL_zimbraPrefMailItemsPerPage = \u6bcf\u9875\u663e\u793a\u7684\u9879\u76ee\u6570\uff1a
 MSG_zimbraPrefMailItemsPerPage = \u6bcf\u9875\u663e\u793a\u7684\u6761\u76ee\u6570
