--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -1210,6 +1210,7 @@ NAD_MonitorHostServer = \u76e3\u8996\u4e3b\u6a5f\u4f3a\u670d\u5668\uff1a
 NAD_GeneralOptions = \u4e00\u822c\u9078\u9805
 NAD_MailOptions = \u90f5\u4ef6\u9078\u9805
 NAD_MailOptionsStandardClient = \u6a19\u6e96 (HTML) \u7528\u6236\u7aef
+NAD_PopImapOptions = POP/IMAP \u9078\u9805
 NAD_ContactsOptions = \u806f\u7d61\u4eba\u9078\u9805
 NAD_CalendarOptions = \u8a18\u4e8b\u7c3f\u9078\u9805
 NAD_MailOptionsSending = \u50b3\u9001\u90f5\u4ef6
@@ -1373,6 +1374,7 @@ LBL_zimbraFeatureFiltersEnabled = \u90f5\u4ef6\u904e\u6ffe\u5668
 LBL_zimbraFeatureMailForwardingEnabled = \u5141\u8a31\u7528\u6236\u6307\u5b9a\u8f49\u5bc4\u5730\u5740
 LBL_zimbraImapEnabled = IMAP \u5b58\u53d6
 LBL_zimbraPop3Enabled = POP3 \u5b58\u53d6
+LBL_zimbraFeatureWebClientEnabled = \u0057\u0065\u0062\u5ba2\u6236\u7aef\u8a2a\u554f
 LBL_zimbraExternalImapEnabled = \u5916\u90e8 IMAP \u5b58\u53d6
 LBL_zimbraExternalPop3Enabled = \u5916\u90e8 POP \u5b58\u53d6
 LBL_zimbraFeatureSharingEnabled = \u5206\u4eab
@@ -1445,6 +1447,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = \u56de\u8986\u6642\u5305\u62ec\u539f\u4
 LBL_zimbraPrefForwardIncludeOriginalText = \u8f49\u5bc4\u6642\u5305\u62ec\u539f\u4ef6
 LBL_zimbraPrefComposeInNewWindow = \u7e3d\u5728\u65b0\u8996\u7a97\u4e2d\u5beb\u4fe1
 LBL_zimbraPrefForwardReplyInOriginalFormat = \u56de\u8986/\u8f49\u5bc4\u6642\u4f7f\u7528\u539f\u59cb\u90f5\u4ef6\u7684\u683c\u5f0f
+LBL_zimbraPrefImapEnabled = \u555f\u7528IMAP\u8a2a\u554f
+LBL_zimbraPrefPop3Enabled = \u555f\u7528POP\u8a2a\u554f
 LBL_zimbraPrefAutoAddAddressEnabled = \u555f\u7528\u81ea\u52d5\u52a0\u5165\u806f\u7d61\u4eba\u529f\u80fd
 LBL_zimbraPrefMailItemsPerPage = \u6bcf\u9801\u986f\u793a\u7684\u9805\u76ee\u6578\ufe55
 MSG_zimbraPrefMailItemsPerPage = \u6bcf\u9801\u986f\u793a\u7684\u9805\u76ee\u6578
