--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -1226,6 +1226,7 @@ NAD_MonitorHostServer = Moniteur du serveur d\u2019h\u00e9bergement\u00a0:
 NAD_GeneralOptions = Options G\u00e9n\u00e9rales
 NAD_MailOptions = Options mail
 NAD_MailOptionsStandardClient = Client standard (HTML)
+NAD_PopImapOptions = Options POP/IMAP
 NAD_ContactsOptions = Options des contacts
 NAD_CalendarOptions = Options d\u2019agenda
 NAD_MailOptionsSending = Envoi de mail
@@ -1389,6 +1390,7 @@ LBL_zimbraFeatureFiltersEnabled = Filtres de mails
 LBL_zimbraFeatureMailForwardingEnabled = Permettre \u00e0 l\u2019utilisateur d\u2019indiquer une adresse de redirection:
 LBL_zimbraImapEnabled = Acc\u00e8s IMAP
 LBL_zimbraPop3Enabled = Acc\u00e8s POP3
+LBL_zimbraFeatureWebClientEnabled = Acc\u00e8s client Web
 LBL_zimbraExternalImapEnabled = Acc\u00e8s externe en mode IMAP
 LBL_zimbraExternalPop3Enabled = Acc\u00e8s externe POP
 LBL_zimbraFeatureSharingEnabled = Partage
@@ -1461,6 +1463,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Inclure le texte original dans les r\u0
 LBL_zimbraPrefForwardIncludeOriginalText = Inclure le texte original dans les redirections\u00a0:
 LBL_zimbraPrefComposeInNewWindow = Toujours ouvrir une nouvelle fen\u00eatre pour cr\u00e9er un mail
 LBL_zimbraPrefForwardReplyInOriginalFormat = R\u00e9ponse/Redirection avec le format du mail original
+LBL_zimbraPrefImapEnabled = Activer l\u0027acc\u00e8s IMAP
+LBL_zimbraPrefPop3Enabled = Activer l\u0027acc\u00e8s POP
 LBL_zimbraPrefAutoAddAddressEnabled = Activer la m\u00e9morisation automatique des contacts
 LBL_zimbraPrefMailItemsPerPage = Nombre d\u2019objets affich\u00e9s par page\u00a0:
 MSG_zimbraPrefMailItemsPerPage = Nombre d\u2019objets par page
