--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -1237,6 +1237,7 @@ NAD_MonitorHostServer = Surveillance du serveur d\u2019h\u00e9bergement\u00a0:
 NAD_GeneralOptions = Options g\u00e9n\u00e9rales
 NAD_MailOptions = Options de courriel
 NAD_MailOptionsStandardClient = Client standard (HTML)
+NAD_PopImapOptions = Options POP/IMAP
 NAD_ContactsOptions = Options de contacts
 NAD_CalendarOptions = Options de calendrier
 NAD_MailOptionsSending = Envoi de courriel
@@ -1400,6 +1401,7 @@ LBL_zimbraFeatureFiltersEnabled = Filtres de courriels
 LBL_zimbraFeatureMailForwardingEnabled = Permettre \u00e0 l\u2019utilisateur d\u2019indiquer une adresse de transfert:
 LBL_zimbraImapEnabled = Acc\u00e8s IMAP
 LBL_zimbraPop3Enabled = Acc\u00e8s POP3
+LBL_zimbraFeatureWebClientEnabled = Acc\u00e8s client Web
 LBL_zimbraExternalImapEnabled = Acc\u00e8s externe en mode IMAP
 LBL_zimbraExternalPop3Enabled = Acc\u00e8s externe POP
 LBL_zimbraFeatureSharingEnabled = Partage
@@ -1472,6 +1474,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = Inclure le texte original dans les r\u0
 LBL_zimbraPrefForwardIncludeOriginalText = Inclure le texte original dans les transferts\u00a0:
 LBL_zimbraPrefComposeInNewWindow = Toujours ouvrir une nouvelle fen\u00eatre pour cr\u00e9er un courriel
 LBL_zimbraPrefForwardReplyInOriginalFormat = R\u00e9ponse/Transfert avec le format du courriel original
+LBL_zimbraPrefImapEnabled = Activer l\u0027acc\u00e8s IMAP
+LBL_zimbraPrefPop3Enabled = Activer l\u0027acc\u00e8s POP
 LBL_zimbraPrefAutoAddAddressEnabled = Activer la m\u00e9morisation automatique des contacts
 LBL_zimbraPrefMailItemsPerPage = Nombre d\u2019objets affich\u00e9s par page\u00a0:
 MSG_zimbraPrefMailItemsPerPage = Nombre d\u2019objets par page
