--- a/WebRoot/messages/ZaMsg_hi.properties
+++ b/WebRoot/messages/ZaMsg_hi.properties
@@ -1210,6 +1210,7 @@ NAD_MonitorHostServer = \u0939\u094b\u0938\u094d\u200d\u091f \u0938\u0930\u094d\
 NAD_GeneralOptions = \u0938\u093e\u092e\u093e\u0928\u094d\u200d\u092f \u0935\u093f\u0915\u0932\u094d\u200d\u092a
 NAD_MailOptions = \u092e\u0947\u0932 \u0935\u093f\u0915\u0932\u094d\u092a
 NAD_MailOptionsStandardClient = \u092e\u093e\u0928\u0915 (HTML) \u0915\u094d\u0932\u093e\u0907\u0902\u091f
+NAD_PopImapOptions = POP/IMAP \u0935\u093f\u0915\u0932\u094d\u092a
 NAD_ContactsOptions = \u0938\u0902\u092a\u0930\u094d\u0915 \u0935\u093f\u0915\u0932\u094d\u092a
 NAD_CalendarOptions = \u0915\u0948\u0932\u0947\u0902\u0921\u0930 \u0935\u093f\u0915\u0932\u094d\u092a
 NAD_MailOptionsSending = \u092e\u0947\u0932 \u092d\u0947\u091c\u0928\u093e
@@ -1373,6 +1374,7 @@ LBL_zimbraFeatureFiltersEnabled = \u092e\u0947\u0932 \u092b\u093c\u093f\u0932\u0
 LBL_zimbraFeatureMailForwardingEnabled = \u092f\u0942\u091c\u093c\u0930 \u0915\u094b \u0915\u094b\u0908 \u092b\u0949\u0930\u093e\u0935\u0930\u094d\u0921\u093f\u0902\u0917 \u090f\u0921\u094d\u0930\u0948\u0938 \u0928\u093f\u0930\u094d\u0926\u093f\u0937\u094d\u200d\u091f \u0915\u0930\u0928\u0947 \u0915\u0940 \u0905\u0928\u0941\u092e\u0924\u093f\u00a0\u0926\u0947\u0902
 LBL_zimbraImapEnabled = IMAP \u090f\u0915\u094d\u0938\u0947\u0938
 LBL_zimbraPop3Enabled = POP3 \u090f\u0915\u094d\u0938\u0947\u0938
+LBL_zimbraFeatureWebClientEnabled = \u0935\u0947\u092c \u0915\u094d\u0932\u093e\u0907\u0902\u091f \u090f\u0915\u094d\u0938\u0947\u0938
 LBL_zimbraExternalImapEnabled = \u092c\u093e\u0939\u094d\u092f IMAP \u090f\u0915\u094d\u0938\u0947\u0938
 LBL_zimbraExternalPop3Enabled = \u092c\u093e\u0939\u094d\u092f POP \u090f\u0915\u094d\u0938\u0947\u0938
 LBL_zimbraFeatureSharingEnabled = \u0938\u093e\u091d\u093e\u0915\u0930\u0923
@@ -1445,6 +1447,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = \u0909\u0924\u094d\u200d\u0924\u0930 \u
 LBL_zimbraPrefForwardIncludeOriginalText = \u092b\u093c\u0949\u0930\u0935\u0930\u094d\u0921 \u0915\u0930\u0928\u0947 \u092a\u0930, \u092e\u0942\u0932 \u092a\u093e\u0920 \u0936\u093e\u092e\u093f\u0932 \u0915\u0930\u0947\u0902
 LBL_zimbraPrefComposeInNewWindow = \u0939\u092e\u0947\u0936\u093e \u0928\u0908 \u0935\u093f\u0902\u0921\u094b \u092e\u0947\u0902 \u0932\u093f\u0916\u0947\u0902
 LBL_zimbraPrefForwardReplyInOriginalFormat = \u092e\u0942\u0932 \u092e\u0948\u0938\u0947\u091c \u0915\u0947 \u092b\u093c\u0949\u0930\u094d\u092e\u0947\u091f \u0915\u0947 \u0909\u092a\u092f\u094b\u0917 \u0938\u0947 \u0909\u0924\u094d\u200d\u0924\u0930 \u0926\u0947\u0902/\u092b\u093c\u0949\u0930\u0935\u0930\u094d\u0921 \u0915\u0930\u0947\u0902
+LBL_zimbraPrefImapEnabled = IMAP \u090f\u0915\u094d\u0938\u0947\u0938 \u0938\u0915\u094d\u0937\u092e \u0915\u0930\u0947\u0902
+LBL_zimbraPrefPop3Enabled = POP \u090f\u0915\u094d\u0938\u0947\u0938 \u0938\u0915\u094d\u0937\u092e \u0915\u0930\u0947\u0902
 LBL_zimbraPrefAutoAddAddressEnabled = \u0938\u094d\u0935\u0924: \u0938\u0902\u092a\u0930\u094d\u0915 \u091c\u094b\u0921\u093c\u0928\u093e \u0938\u0915\u094d\u0937\u092e \u0915\u0930\u0947\u0902
 LBL_zimbraPrefMailItemsPerPage = \u092a\u094d\u0930\u0924\u093f \u092a\u0943\u0937\u094d\u0920 \u092a\u094d\u0930\u0926\u0930\u094d\u0936\u093f\u0924 \u0939\u094b\u0928\u0947 \u0935\u093e\u0932\u0947 \u0906\u0907\u091f\u092e\u094d\u0938 \u0915\u0940 \u0938\u0902\u0916\u094d\u200d\u092f\u093e
 MSG_zimbraPrefMailItemsPerPage = \u092a\u094d\u0930\u0924\u094d\u092f\u0947\u0915 \u092a\u0943\u0937\u094d\u0920 \u092a\u0930 \u092a\u094d\u0930\u0926\u0930\u094d\u0936\u093f\u0924 \u0915\u093f\u090f \u091c\u093e\u0928\u0947 \u0935\u093e\u0932\u0947 \u0906\u0907\u091f\u092e\u094d\u0938 \u0915\u0940 \u0938\u0902\u0916\u094d\u092f\u093e
