--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -1219,6 +1219,7 @@ NAD_MonitorHostServer = \u30db\u30b9\u30c8\u30b5\u30fc\u30d0\u30fc\u3092\u76e3\u
 NAD_GeneralOptions = \u5168\u822c\u30aa\u30d7\u30b7\u30e7\u30f3
 NAD_MailOptions = \u30e1\u30fc\u30eb\u306e\u30aa\u30d7\u30b7\u30e7\u30f3
 NAD_MailOptionsStandardClient = \u6a19\u6e96\uff08HTML\uff09\u30af\u30e9\u30a4\u30a2\u30f3\u30c8
+NAD_PopImapOptions = POP/IMAP\u306e\u30aa\u30d7\u30b7\u30e7\u30f3
 NAD_ContactsOptions = \u9023\u7d61\u5148\u306e\u30aa\u30d7\u30b7\u30e7\u30f3
 NAD_CalendarOptions = \u30ab\u30ec\u30f3\u30c0\u30fc\u306e\u30aa\u30d7\u30b7\u30e7\u30f3
 NAD_MailOptionsSending = \u30e1\u30fc\u30eb\u306e\u9001\u4fe1
@@ -1382,6 +1383,7 @@ LBL_zimbraFeatureFiltersEnabled = \u30e1\u30fc\u30eb\u30d5\u30a3\u30eb\u30bf\u30
 LBL_zimbraFeatureMailForwardingEnabled = \u30e6\u30fc\u30b6\u30fc\u306b\u8ee2\u9001\u5148\u30a2\u30c9\u30ec\u30b9\u306e\u6307\u5b9a\u3092\u8a31\u53ef
 LBL_zimbraImapEnabled = IMAP\u30a2\u30af\u30bb\u30b9
 LBL_zimbraPop3Enabled = POP3\u30a2\u30af\u30bb\u30b9
+LBL_zimbraFeatureWebClientEnabled = \u30a6\u30a7\u30d6\u30af\u30e9\u30a4\u30a2\u30f3\u30c8\u30a2\u30af\u30bb\u30b9
 LBL_zimbraExternalImapEnabled = \u5916\u90e8IMAP\u30a2\u30af\u30bb\u30b9
 LBL_zimbraExternalPop3Enabled = \u5916\u90e8POP\u30a2\u30af\u30bb\u30b9
 LBL_zimbraFeatureSharingEnabled = \u5171\u6709
@@ -1454,6 +1456,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = \u8fd4\u4fe1\u6642\u306b\u5143\u306e\u3
 LBL_zimbraPrefForwardIncludeOriginalText = \u8ee2\u9001\u6642\u306b\u5143\u306e\u30c6\u30ad\u30b9\u30c8\u3092\u542b\u3081\u308b
 LBL_zimbraPrefComposeInNewWindow = \u5e38\u306b\u65b0\u3057\u3044\u30a6\u30a3\u30f3\u30c9\u30a6\u3067\u4f5c\u6210
 LBL_zimbraPrefForwardReplyInOriginalFormat = \u5143\u306e\u30e1\u30c3\u30bb\u30fc\u30b8\u306e\u5f62\u5f0f\u3092\u4f7f\u7528\u3057\u3066\u8fd4\u4fe1/\u8ee2\u9001
+LBL_zimbraPrefImapEnabled = IMAP\u30a2\u30af\u30bb\u30b9\u3092\u6709\u52b9\u306b\u3059\u308b
+LBL_zimbraPrefPop3Enabled = POP3\u30a2\u30af\u30bb\u30b9\u3092\u6709\u52b9\u306b\u3059\u308b
 LBL_zimbraPrefAutoAddAddressEnabled = \u9023\u7d61\u5148\u306e\u81ea\u52d5\u8ffd\u52a0\u3092\u6709\u52b9\u306b\u3059\u308b
 LBL_zimbraPrefMailItemsPerPage = 1\u30da\u30fc\u30b8\u306b\u8868\u793a\u3059\u308b\u9805\u76ee\u306e\u6570\uff1a
 MSG_zimbraPrefMailItemsPerPage = 1\u30da\u30fc\u30b8\u306b\u8868\u793a\u3059\u308b\u9805\u76ee\u306e\u6570
