--- a/WebRoot/messages/ZaMsg_lo.properties
+++ b/WebRoot/messages/ZaMsg_lo.properties
@@ -1237,6 +1237,7 @@ NAD_MonitorHostServer = \u200b\u0e95\u0eb4\u0e94\u0e95\u0eb2\u0ea1\u0ec0\u0e8a\u
 NAD_GeneralOptions = \u0e95\u0ebb\u0ea7\u200b\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u200b\u0e97\u0ebb\u0ec8\u0ea7\u200b\u0ec4\u0e9b
 NAD_MailOptions = \u0e95\u0ebb\u0ea7\u200b\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u0ec0\u0ea1\u0ea7
 NAD_MailOptionsStandardClient = \u200b\u0ec0\u0e84\u0eb7\u0ead\u200b\u0e82\u0ec8\u0eb2\u0e8d\u200b\u0ea5\u0eb9\u0e81 (HTML) \u0ea1\u0eb2\u0e94\u0e95\u0eb0\u0e96\u0eb2\u0e99
+NAD_PopImapOptions = \u0e95\u0ebb\u0ea7\u0ec0\u0ea5\u0eb7\u0ead\u0e81 POP/IMAP
 NAD_ContactsOptions = \u0e95\u0ebb\u0ea7\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u0ea5\u0eb2\u0e8d\u0e8a\u0eb7\u0e9c\u0eb9\u0ec9\u0e95\u0eb4\u0e94\u0e95\u0ecd\u0ec8
 NAD_CalendarOptions = \u0e95\u0ebb\u0ea7\u200b\u0ec0\u0ea5\u0eb7\u0ead\u0e81\u200b\u0e9b\u0eb0\u0e95\u0eb4\u0e97\u0eb4\u0e99
 NAD_MailOptionsSending = \u0e81\u0ecd\u0eb2\u0ea5\u0eb1\u0e87\u0eaa\u0ebb\u0ec8\u0e87\u200b\u0ec0\u0ea1\u0ea7
@@ -1400,6 +1401,7 @@ LBL_zimbraFeatureFiltersEnabled = \u0e95\u0ebb\u0ea7\u0e81\u0eb1\u0ec8\u0e99\u20
 LBL_zimbraFeatureMailForwardingEnabled = \u0ead\u0eb0\u0e99\u0eb8\u0e8d\u0eb2\u0e94\u0ec3\u0eab\u0ec9\u200b\u0e9c\u0eb9\u0ec9\u200b\u0ec3\u0e8a\u0ec9\u0ea5\u0eb0\u0e9a\u0eb8\u200b\u0e97\u0eb5\u0ec8\u0ea2\u0eb9\u0ec8\u200b\u0eaa\u0ebb\u0ec8\u0e87\u200b\u0e95\u0ecd\u0ec8
 LBL_zimbraImapEnabled = \u200b\u0ec0\u0e82\u0ebb\u0ec9\u0eb2\u200b\u0ec0\u0e96\u0eb4\u0e87 IMAP 
 LBL_zimbraPop3Enabled = \u200b\u0ec0\u0e82\u0ebb\u0ec9\u0eb2\u200b\u0ec0\u0e96\u0eb4\u0e87 POP3 
+LBL_zimbraFeatureWebClientEnabled = \u0e81\u0eb2\u0e99\u0ec0\u0e82\u0ebb\u0ec9\u0eb2\u0ec0\u0e96\u0eb4\u0e87\u0ea5\u0eb9\u0e81\u0e84\u0ec9\u0eb2\u0ec0\u0ea7\u0eb1\u0e9a
 LBL_zimbraExternalImapEnabled = \u200b\u0ec0\u0e82\u0ebb\u0ec9\u0eb2\u200b\u0ec0\u0e96\u0eb4\u0e87 IMAP \u0e9e\u0eb2\u0e8d\u0e99\u0ead\u0e81
 LBL_zimbraExternalPop3Enabled = \u200b\u0ec0\u0e82\u0ebb\u0ec9\u0eb2\u200b\u0ec0\u0e96\u0eb4\u0e87 POP \u0e9e\u0eb2\u0e8d\u200b\u0e99\u0ead\u0e81
 LBL_zimbraFeatureSharingEnabled = \u0e81\u0eb2\u0e99\u0ec1\u0e9a\u0ec8\u0e87\u0e9b\u0eb1\u0e9a
@@ -1472,6 +1474,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = \u200b\u200b\u0ec0\u0ea1\u0eb7\u0ec8\u0
 LBL_zimbraPrefForwardIncludeOriginalText = \u200b\u200b\u0ec0\u0ea1\u0eb7\u0ec8\u0ead\u0eaa\u0e87\u200b\u0e95\u0ecd\u0ec8, \u0ea5\u0ea7\u0ea1\u200b\u0ec0\u0ead\u0ebb\u0eb2\u0e82\u0ecd\u0ec9\u0e84\u0ea7\u0eb2\u0ea1\u200b\u200b\u200b\u0e95\u0ebb\u0ec9\u0e99\u200b\u0eaa\u0eb0\u0e9a\u0eb1\u0e9a
 LBL_zimbraPrefComposeInNewWindow = \u0eaa\u0ec9\u0eb2\u0e87\u0edc\u0ec9\u0eb2\u0e95\u0ec8\u0eb2\u0e87\u0ec3\u0edd\u0ec8\u0ec0\u0ea5\u0eb7\u0ec9\u0ead\u0e8d\u0ec6
 LBL_zimbraPrefForwardReplyInOriginalFormat = \u0e95\u0ead\u0e9a\u200b\u0e81\u0eb1\u0e9a/\u0eaa\u0ebb\u0ec8\u0e87\u200b\u0e95\u0ecd\u0ec8\u200b \u200b\u0ec2\u0e94\u0e8d\u200b\u0ec3\u0e8a\u0ec9\u200b\u0eae\u0eb9\u200b\u0e9a\u200b\u0ec1\u0e9a\u0e9a\u200b\u0e82\u0ecd\u0ec9\u0e84\u0ea7\u0eb2\u0ea1\u200b\u0e95\u0ebb\u0ec9\u0e99\u200b\u0eaa\u0eb0\u0e9a\u0eb1\u0e9a
+LBL_zimbraPrefImapEnabled = \u0ec0\u0e9b\u0eb5\u0e94 \u0e99\u0eb3 \u0ec3\u0e8a\u0ec9 IMAP
+LBL_zimbraPrefPop3Enabled = \u0ec0\u0e9b\u0eb5\u0e94 \u0e99\u0eb3 \u0ec3\u0e8a\u0ec9 POP
 LBL_zimbraPrefAutoAddAddressEnabled = \u200b\u0ec0\u0e9b\u0eb5\u0e94\u200b\u0ec3\u0e8a\u0ec9\u200b\u0e87\u0eb2\u0e99\u200b\u0ec0\u0e9e\u0eb5\u0ec8\u0ea1\u200b\u0ea5\u0eb2\u0e8d\u200b\u0e8a\u0eb7\u0ec8\u200b\u0e95\u0eb4\u0e94\u200b\u0e95\u0ecd\u0ec8\u0ead\u0eb1\u0e94\u0e95\u0eb0\u0ec2\u0e99\u0ea1\u0eb1\u0e94
 LBL_zimbraPrefMailItemsPerPage = \u0e88\u0eb3\u200b\u0e99\u0ea7\u0e99\u200b\u0ea5\u0eb2\u0e8d\u200b\u0e81\u0eb2\u0e99\u200b\u0e97\u0eb5\u0ec8\u200b\u0eaa\u0eb0\u200b\u0ec1\u0e94\u0e87\u200b\u0e95\u0ecd\u0ec8\u0edc\u0ec9\u0eb2:
 MSG_zimbraPrefMailItemsPerPage = \u0e88\u0eb3\u0e99\u0ea7\u0e99\u0ea5\u0eb2\u0e8d\u0e81\u0eb2\u0e99\u0e97\u0eb5\u0ec8\u0e88\u0eb0\u0eaa\u0eb0\u0ec1\u0e94\u0e87\u0e95\u0ecd\u0ec8\u0edc\u0ec9\u0eb2
