--- a/WebRoot/messages/ZaMsg_ta.properties
+++ b/WebRoot/messages/ZaMsg_ta.properties
@@ -1240,6 +1240,7 @@ NAD_MonitorHostServer = \u0b95\u0ba3\u0bcd\u0b95\u0bbe\u0ba3\u0bbf\u0baa\u0bcd\u
 NAD_GeneralOptions = \u0baa\u0bca\u0ba4\u0bc1 \u0bb5\u0bbf\u0bb0\u0bc1\u0baa\u0bcd\u0baa\u0b99\u0bcd\u0b95\u0bb3\u0bcd
 NAD_MailOptions = \u0b85\u0b9e\u0bcd\u0b9a\u0bb2\u0bcd \u0bb5\u0bbf\u0bb0\u0bc1\u0baa\u0bcd\u0baa\u0b99\u0bcd\u0b95\u0bb3\u0bcd
 NAD_MailOptionsStandardClient = \u0bb8\u0bcd\u0b9f\u0bbe\u0ba3\u0bcd\u0b9f\u0bb0\u0bcd\u0b9f\u0bc1 (HTML) \u0b95\u0bbf\u0bb3\u0bc8\u0baf\u0ba9\u0bcd\u0b9f\u0bcd
+NAD_PopImapOptions = POP/IMAP \u0bb5\u0bbf\u0bb0\u0bc1\u0baa\u0bcd\u0baa\u0b99\u0bcd\u0b95\u0bb3\u0bcd
 NAD_ContactsOptions = \u0ba4\u0bca\u0b9f\u0bb0\u0bcd\u0baa\u0bc1\u0b95\u0bb3\u0bcd \u0bb5\u0bbf\u0bb0\u0bc1\u0baa\u0bcd\u0baa\u0b99\u0bcd\u0b95\u0bb3\u0bcd
 NAD_CalendarOptions = \u0ba8\u0bbe\u0b9f\u0bcd\u0b95\u0bbe\u0b9f\u0bcd\u0b9f\u0bbf \u0bb5\u0bbf\u0bb0\u0bc1\u0baa\u0bcd\u0baa\u0b99\u0bcd\u0b95\u0bb3\u0bcd
 NAD_MailOptionsSending = \u0b85\u0b9e\u0bcd\u0b9a\u0bb2\u0bc8 \u0b85\u0ba9\u0bc1\u0baa\u0bcd\u0baa\u0bc1\u0ba4\u0bb2\u0bcd
@@ -1403,6 +1404,7 @@ LBL_zimbraFeatureFiltersEnabled = \u0b85\u0b9e\u0bcd\u0b9a\u0bb2\u0bcd \u0bb5\u0
 LBL_zimbraFeatureMailForwardingEnabled = \u0bae\u0bc1\u0ba9\u0bcd\u0ba9\u0ba9\u0bc1\u0baa\u0bcd\u0baa\u0baa\u0bcd\u0baa\u0b9f\u0bcd\u0b9f \u0bae\u0bc1\u0b95\u0bb5\u0bb0\u0bbf\u0baf\u0bc8\u0b95\u0bcd \u0b95\u0bc1\u0bb1\u0bbf\u0baa\u0bcd\u0baa\u0bbf\u0b9f \u0baa\u0baf\u0ba9\u0bb0\u0bc8 \u0b85\u0ba9\u0bc1\u0bae\u0ba4\u0bbf
 LBL_zimbraImapEnabled = IMAP \u0b85\u0ba3\u0bc1\u0b95\u0bb2\u0bcd
 LBL_zimbraPop3Enabled = POP3 \u0b85\u0ba3\u0bc1\u0b95\u0bb2\u0bcd
+LBL_zimbraFeatureWebClientEnabled = \u0bb5\u0bb2\u0bc8 \u0b95\u0bbf\u0bb3\u0bc8\u0baf\u0ba9\u0bcd\u0b9f\u0bcd \u0b85\u0ba3\u0bc1\u0b95\u0bb2\u0bcd
 LBL_zimbraExternalImapEnabled = \u0bb5\u0bc6\u0bb3\u0bbf\u0baa\u0bcd\u0baa\u0bc1\u0bb1 IMAP \u0b85\u0ba3\u0bc1\u0b95\u0bb2\u0bcd
 LBL_zimbraExternalPop3Enabled = \u0bb5\u0bc6\u0bb3\u0bbf\u0baa\u0bcd\u0baa\u0bc1\u0bb1 POP \u0b85\u0ba3\u0bc1\u0b95\u0bb2\u0bcd
 LBL_zimbraFeatureSharingEnabled = \u0baa\u0b95\u0bbf\u0bb0\u0bcd\u0ba4\u0bb2\u0bcd
@@ -1475,6 +1477,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = \u0baa\u0ba4\u0bbf\u0bb2\u0ba9\u0bc1\u0
 LBL_zimbraPrefForwardIncludeOriginalText = \u0bae\u0bc1\u0ba9\u0bcd\u0ba9\u0ba9\u0bc1\u0baa\u0bcd\u0baa\u0bc1\u0bae\u0bcd\u0baa\u0bcb\u0ba4\u0bc1 \u0baa\u0bcb\u0ba4\u0bc1, \u0b85\u0b9a\u0bb2\u0bcd \u0b89\u0bb0\u0bc8\u0baf\u0bc8 \u0b9a\u0bc7\u0bb0\u0bcd\u0b95\u0bcd\u0b95\u0bb5\u0bc1\u0bae\u0bcd
 LBL_zimbraPrefComposeInNewWindow = \u0baa\u0bc1\u0ba4\u0bbf\u0baf \u0b9a\u0bbe\u0bb3\u0bb0\u0ba4\u0bcd\u0ba4\u0bbf\u0bb2\u0bcd \u0b8e\u0baa\u0bcd\u0baa\u0bcb\u0ba4\u0bc1\u0bae\u0bcd \u0b8e\u0bb4\u0bc1\u0ba4\u0bc1
 LBL_zimbraPrefForwardReplyInOriginalFormat = \u0b85\u0b9a\u0bb2\u0bcd \u0b9a\u0bc6\u0baf\u0bcd\u0ba4\u0bbf\u0baf\u0bbf\u0ba9\u0bcd \u0bb5\u0b9f\u0bbf\u0bb5\u0bae\u0bc8\u0baa\u0bcd\u0baa\u0bc8\u0baa\u0bcd \u0baa\u0baf\u0ba9\u0bcd\u0baa\u0b9f\u0bc1\u0ba4\u0bcd\u0ba4\u0bbf, \u0baa\u0ba4\u0bbf\u0bb2\u0bb3\u0bbf/\u0bae\u0bc1\u0ba9\u0bcd\u0ba9\u0ba9\u0bc1\u0baa\u0bcd\u0baa\u0bc1
+LBL_zimbraPrefImapEnabled = IMAP \u0b85\u0ba3\u0bc1\u0b95\u0bb2\u0bc8 \u0b87\u0baf\u0b95\u0bcd\u0b95\u0bc1
+LBL_zimbraPrefPop3Enabled = POP \u0b85\u0ba3\u0bc1\u0b95\u0bb2\u0bc8 \u0b87\u0baf\u0b95\u0bcd\u0b95\u0bc1
 LBL_zimbraPrefAutoAddAddressEnabled = \u0ba4\u0bbe\u0ba9\u0bbe\u0b95 \u0ba4\u0bca\u0b9f\u0bb0\u0bcd\u0baa\u0bc1\u0b95\u0bb3\u0bc8\u0b9a\u0bcd \u0b9a\u0bc7\u0bb0\u0bcd\u0b95\u0bcd\u0b95\u0bc1\u0bae\u0bcd \u0bb5\u0b9a\u0ba4\u0bbf\u0baf\u0bc8 \u0b87\u0baf\u0b95\u0bcd\u0b95\u0bc1
 LBL_zimbraPrefMailItemsPerPage = \u0b95\u0bbe\u0b9f\u0bcd\u0b9f\u0bc1\u0bb5\u0ba4\u0bb1\u0bcd\u0b95\u0bc1, \u0b92\u0bb0\u0bc1 \u0baa\u0b95\u0bcd\u0b95\u0ba4\u0bcd\u0ba4\u0bbf\u0bb1\u0bcd\u0b95\u0bbe\u0ba9 \u0b89\u0bb0\u0bc1\u0baa\u0bcd\u0baa\u0b9f\u0bbf\u0b95\u0bb3\u0bbf\u0ba9\u0bcd \u0b8e\u0ba3\u0bcd\u0ba3\u0bbf\u0b95\u0bcd\u0b95\u0bc8:
 MSG_zimbraPrefMailItemsPerPage = \u0b95\u0bbe\u0b9f\u0bcd\u0b9f\u0bc1\u0bb5\u0ba4\u0bb1\u0bcd\u0b95\u0bc1, \u0b92\u0bb0\u0bc1 \u0baa\u0b95\u0bcd\u0b95\u0ba4\u0bcd\u0ba4\u0bbf\u0bb1\u0bcd\u0b95\u0bbe\u0ba9 \u0b89\u0bb0\u0bc1\u0baa\u0bcd\u0baa\u0b9f\u0bbf\u0b95\u0bb3\u0bbf\u0ba9\u0bcd \u0b8e\u0ba3\u0bcd\u0ba3\u0bbf\u0b95\u0bcd\u0b95\u0bc8
